tests/fixtures/errors/const_cycle.gcl
// Const cycle: x depends on y, y depends on x
const node x: Dimensionless = @y + 1.0;
const node y: Dimensionless = @x + 1.0;
